--- a/tasks.gradle
+++ b/tasks.gradle
@@ -75,18 +75,19 @@ task "tomcat.env.file" {
 }
 
 afterEvaluate {
-    tasks.named("smartbuild").configure { task ->
-        task.dependsOn("tomcatStart")
-        task.finalizedBy("tomcatDeploy")
+    if(isTomcatEnabled) {
+        tasks.named("smartbuild").configure { task ->
+            task.dependsOn("tomcatStart")
+            task.finalizedBy("tomcatDeploy")
+        }
+        tasks.named("update.database").configure { task ->
+            task.dependsOn("tomcatStop")
+        }
+        tasks.named("install").configure { task ->
+            task.dependsOn("tomcatStop")
+        }
+        tasks.named("generateEnvFile").configure { task ->
+            task.finalizedBy("tomcat.env.file")
+        }
     }
-    tasks.named("update.database").configure { task ->
-        task.dependsOn("tomcatStop")
-    }
-    tasks.named("install").configure { task ->
-        task.dependsOn("tomcatStop")
-    }
-    tasks.named("generateEnvFile").configure { task ->
-        task.finalizedBy("tomcat.env.file")
-    }
-
 }
