Update version to 1.0.0 :zap:

--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@
 */
 
 group          = "com.etendoerp"
-version        = "0.0.6"
-description    = "Module to add docker container utils to easy contained manage"
+version        = "1.0.0"
+description    = "Dockerized tomcat deploy"
 ext.artifact   = "tomcat"
 ext.repository = "https://maven.pkg.github.com/etendosoftware/com.etendoerp.platform.extensions"
 
@@ -37,14 +37,13 @@ repositories {
     maven {
         url "https://maven.pkg.github.com/etendosoftware/com.etendoerp.platform.extensions"
     }
-    maven {
-        url "https://repo.futit.cloud/repository/maven-releases"
-    }
-    maven {
-        url "https://repo.futit.cloud/repository/maven-public-releases"
-    }
-    maven {
-        url "https://repo.futit.cloud/repository/maven-snapshots"
+}
+
+sourceSets {
+    main {
+        resources {
+            srcDirs("compose","etendo-resources")
+        }
     }
 }
 
@@ -53,13 +52,7 @@ repositories {
 * Ex: implementation "com.sun.mail:javax.mail:1.6.2"
 */
 dependencies {
-    implementation('com.etendoerp:docker:0.0.3')
+    implementation('com.etendoerp:docker:1.1.0')
 }
 
-sourceSets {
-    main {
-        resources {
-            srcDirs("compose")
-        }
-    }
-}
+
