--- a/compose/com.etendoerp.tomcat.yml
+++ b/compose/com.etendoerp.tomcat.yml
@@ -10,6 +10,7 @@ services:
       - "host.docker.internal:host-gateway"
     volumes:
       - ${VOLUMES_PATH}/tomcat/webapps:/usr/local/tomcat/webapps
+      - ${ATTACH_PATH}:${ATTACH_PATH}
     environment:
       - JPDA_OPTS="-agentlib:jdwp=transport=dt_socket,address=*:8000,server=y,suspend=n"
     command: ["catalina.sh", "jpda", "run"]
