Feature ETP-525: Tomcat container uses .env file

--- a/compose/com.etendoerp.tomcat.yml
+++ b/compose/com.etendoerp.tomcat.yml
@@ -1,6 +1,7 @@
 services:
   tomcat:
     image: tomcat:9.0.91-jdk17-corretto
+    env_file: ".env"
     ports:
       - "${TOMCAT_PORT}:8080"
       - "${TOMCAT_DEBUG_PORT}:8000"
