--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ sourceSets {
 */
 dependencies {
     implementation('com.etendoerp:docker:1.6.1')
+    implementation('com.etendoerp.platform:etendo-core:[23.2.0,25.1.0)')
 }
 
 
