--- a/compose/com.etendoerp.tomcat.yml
+++ b/compose/com.etendoerp.tomcat.yml
@@ -4,7 +4,7 @@ services:
     env_file: ".env"
     ports:
       - "${TOMCAT_PORT}:8080"
-      - "${TOMCAT_DEBUG_PORT}:8000"
+      - "${TOMCAT_DEBUG_PORT:-8000}:8000"
     networks:
       - etendo
     extra_hosts:
@@ -14,9 +14,15 @@ services:
       - ${ATTACH_PATH}:${ATTACH_PATH}
       - ${SOURCE_PATH}:${SOURCE_PATH}
     environment:
-      - JPDA_OPTS="-agentlib:jdwp=transport=dt_socket,address=*:8000,server=y,suspend=n"
-      - CATALINA_OPTS=${TOMCAT_CATALINA_OPTS}
+      JAVA_OPTS: -XX:MaxRAMPercentage=75.0 -XX:+UseG1GC
+      JPDA_OPTS: "-agentlib:jdwp=transport=dt_socket,address=*:8000,server=y,suspend=n"
+      CATALINA_OPTS: ${TOMCAT_CATALINA_OPTS}
     command: ["catalina.sh", "jpda", "run"]
+    deploy:
+      resources:
+        limits:
+          cpus: "1"
+          memory: 512M
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:${TOMCAT_PORT}/"]
       interval: 10s
